--- a/src/components/About/Skills.module.css
+++ b/src/components/About/Skills.module.css
@@ -10,13 +10,14 @@
 
 .skill_card #skills_txt {
   padding: 30px 0px 10px 0px;
+  font-size: 50px;
 }
 
 .skill_card p {
   font-family: "Lato", sans-serif;
   font-weight: bold;
   padding: 18px;
-  font-size: 20px;
+  font-size: 30px;
 }
 
 .skill_card i {
@@ -24,12 +25,12 @@
   padding-bottom: 20px;
 }
 
-@media only screen and (max-width: 1367px) {
+@media (min-width: 1024px) and (max-width: 1966px) {
   .skill_card {
     top: -10%;
   }
   .skill_card #skills_txt {
-    font-size: 25px;
+    font-size: 40px;
     padding: 20px 0px 10px 0px;
   }
   .skill_card p {
@@ -50,6 +51,15 @@
             flex-direction: column;
     flex-direction: column;
     top: 10%;
+  }
+  .skill_card #skills_txt {
+    font-size: 30px;
+  }
+  .skill_card i {
+    margin-top: 30px;
+  }
+  .skill_card p {
+    font-size: 20px;
   }
 }
 /*# sourceMappingURL=Skills.module.css.map */
