--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -127,6 +127,17 @@ body {
   }
 }
 
+.succes_email{
+  position: absolute;
+  top: 200px;
+  left: 0;
+  z-index: 3;
+  width: 60%;
+  height: 40vh;
+  background: $EmphasizeColor;
+  color: $PrimaryColor;
+}
+
 @media only screen and(max-width:1367px) {
   .contact {
     form {
