--- a/src/components/UI/Card.module.scss
+++ b/src/components/UI/Card.module.scss
@@ -12,9 +12,9 @@
     margin: 50px;
 }
 
-@media only screen and(max-width:1367px){
+@media (min-width:1024px) and (max-width: 1966px){
     .card{
-        height: 77vh;
+        height: 87vh;
         margin: 0px 20px 0px 20px;
     }
 }
